--- a/src/CombatAnalysis.App/App.xaml
+++ b/src/CombatAnalysis.App/App.xaml
@@ -7,6 +7,39 @@
     StartupUri="MainWindow.xaml">
     
     <Application.Resources>
+        <Style x:Key="openInviteToGroupChatStyle" TargetType="Icon:PackIconMaterial">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ElementName=usersEmail, Path=IsEnabled}" Value="False">
+                    <Setter Property="Foreground" Value="Gray"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding ElementName=usersEmail, Path=IsEnabled}" Value="True">
+                    <Setter Property="Foreground" Value="Orange"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="startDialogStyle" TargetType="Icon:PackIconMaterial">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ElementName=usersEmail, Path=IsEnabled}" Value="False">
+                    <Setter Property="Foreground" Value="Gray"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding ElementName=usersEmail, Path=IsEnabled}" Value="True">
+                    <Setter Property="Foreground" Value="Blue"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+
+        <Style x:Key="inviteToGroupChatStyle" TargetType="Icon:PackIconMaterial">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding ElementName=inviteToGroupChat, Path=IsEnabled}" Value="False">
+                    <Setter Property="Foreground" Value="Gray"/>
+                </DataTrigger>
+                <DataTrigger Binding="{Binding ElementName=inviteToGroupChat, Path=IsEnabled}" Value="True">
+                    <Setter Property="Foreground" Value="Green"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+
         <Style x:Key="leftSideButton" TargetType="Button">
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="Foreground" Value="White"/>
