--- a/src/CombatAnalysis.App/App.xaml
+++ b/src/CombatAnalysis.App/App.xaml
@@ -7,6 +7,49 @@
     StartupUri="MainWindow.xaml">
     
     <Application.Resources>
+        <!-- region Home View -->
+
+        <Style x:Key="homeItems" TargetType="Image">
+            <Style.Triggers>
+                <EventTrigger RoutedEvent="MouseEnter">
+                    <EventTrigger.Actions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Storyboard.TargetProperty="Height" From="275" To="300"
+                                            AutoReverse="False"
+                                            RepeatBehavior="1x"
+                                            Duration="0:0:0.5"/>
+                                <DoubleAnimation Storyboard.TargetProperty="Opacity" From="1" To="0.25"
+                                            AutoReverse="False"
+                                            RepeatBehavior="1x"
+                                            Duration="0:0:0.5"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger.Actions>
+                </EventTrigger>
+                <EventTrigger RoutedEvent="MouseLeave">
+                    <EventTrigger.Actions>
+                        <BeginStoryboard>
+                            <Storyboard>
+                                <DoubleAnimation Storyboard.TargetProperty="Height"  From="300" To="275"
+                                            AutoReverse="False"
+                                            RepeatBehavior="1x"
+                                            Duration="0:0:0.5"/>
+                                <DoubleAnimation Storyboard.TargetProperty="Opacity" From="0.25" To="1"
+                                            AutoReverse="False"
+                                            RepeatBehavior="1x"
+                                            Duration="0:0:0.5"/>
+                            </Storyboard>
+                        </BeginStoryboard>
+                    </EventTrigger.Actions>
+                </EventTrigger>
+            </Style.Triggers>
+        </Style>
+        
+        <!-- endregion -->
+        
+        <!-- region Chat View -->
+        
         <Style x:Key="joinToGroupChatStyle" TargetType="Icon:PackIconMaterial">
             <Style.Triggers>
                 <Trigger Property="IsEnabled" Value="False">
@@ -51,6 +94,8 @@
             </Style.Triggers>
         </Style>
 
+        <!-- endregion -->
+        
         <Style x:Key="leftSideButton" TargetType="Button">
             <Setter Property="Background" Value="Transparent"/>
             <Setter Property="Foreground" Value="White"/>
@@ -79,6 +124,7 @@
         </Style>
 
         <!-- region ComboBox Style -->
+            
         <SolidColorBrush x:Key="TextBox.Static.Background" Color="#FFFFFFFF"/>
         
         <LinearGradientBrush x:Key="ComboBox.Static.Background" EndPoint="0,1" StartPoint="0,0">
