--- a/src/CombatAnalysis.App/Views/BasicTemplateView.xaml
+++ b/src/CombatAnalysis.App/Views/BasicTemplateView.xaml
@@ -95,7 +95,7 @@
                 </StackPanel>
 
                 <StackPanel Margin="30 0 0 0" Visibility="{Binding LogPanelStatus}">
-                    <uc:MenuButton Title="Загрузка" Icon="Upload" IsEnabled="{Binding Step, Converter={StaticResource IntToXAMLBoolExpress}, ConverterParameter='>=,-1'}" 
+                    <uc:MenuButton x:Name="combatLogUpload" Title="Загрузка" Icon="Upload" IsEnabled="{Binding Step, Converter={StaticResource IntToXAMLBoolExpress}, ConverterParameter='>=,-1'}" 
                                    IsActive="{Binding Step, Converter={StaticResource IntToXAMLBool}, ConverterParameter= 0}" OnClick="{Binding UploadCombatsCommand}"/>
                     <uc:MenuButton Title="Все бои" Icon="ChartTimelineVariantShimmer" IsEnabled="{Binding AllowStep, Converter={StaticResource IntToXAMLBoolExpress}, ConverterParameter='>,0'}"
                                    IsActive="{Binding Step, Converter={StaticResource IntToXAMLBool}, ConverterParameter=1}" OnClick="{Binding GeneralAnalysisCommand}"/>
