--- a/src/CombatAnalysis.App/Views/GeneralAnalysisView.xaml
+++ b/src/CombatAnalysis.App/Views/GeneralAnalysisView.xaml
@@ -40,7 +40,7 @@
         
         <StackPanel Grid.Column="3" Grid.Row="1" Orientation="Horizontal"
                     HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Button Content="Подробнее" Height="45" Width="125" FontSize="16"
+            <Button Name="details" Content="Подробнее" Height="45" Width="125" FontSize="16"
                     mvx:Bi.nd="Command ShowDetailsCommand" Foreground="ForestGreen" Style="{StaticResource showButton}"/>
             <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Width="75" 
                        Text="Анализ" FontSize="18" FontWeight="Bold"
